fixed answer checking and fixed img display on mobile devices

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -59,6 +59,17 @@ i.footer {
     color: #fff;
 }
 
+.ques-img {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.ques-img img {
+    max-width: 100%;
+    width: 100%;
+}
+
 .ques-input {
     margin-top: 10px !important;
     margin-bottom: 20px !important;
